optional/whoami/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`whoami.wa.suse.net`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoami.wa.suse.net`)  && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: myresolver
